Fix Firefox track too big

--- a/src/styles/scss/_global.scss
+++ b/src/styles/scss/_global.scss
@@ -409,6 +409,7 @@ body {
 		}
 
 		&::-moz-range-progress {
+			height: 2px;
 			background-color: $borderGrey;
 		}
 
@@ -418,7 +419,6 @@ body {
 			width: 20px;
 			border-radius: 50px;
 			border: 0;
-
 			box-shadow: $thumbShadow;
 		}
 	}
